# tree-sitter-grain

./: README.md  meson.build
src/: lexer.c  lexer.h  node.h  token.h
